Update feature description and add images

--- a/style.css
+++ b/style.css
@@ -626,7 +626,7 @@ p {
 }
 
 .app-download-btn a i {
-    color: #47425d;
+    color: white;
     font-size: 24px;
     margin-right: 15px;
     -webkit-transition-duration: 500ms;
